tests/ui/ferrocene/compiler-arguments/upper_c_prefer-dynamic/upper_c_prefer-dynamic_eq-invalid.rs
//@ check-fail
//@ compile-flags: -Cprefer-dynamic=invalid
//~? ERROR incorrect value

fn main() {}

// ferrocene-annotations: um_rustc_C_prefer_dynamic
